# Cidepint-app

./: .gitignore  README.md
admin/: .gitignore  README.md  pyproject.toml
admin/src/api/: autenticacion.py  charts.py  instituciones.py  perfil.py  servicios.py  solicitudes.py
admin/src/core/: bcrypt.py  database.py  seeds.py
admin/src/core/auth/: __init__.py
admin/src/core/forms/: cargarnotaForm.py  configurationForm.py  editarsolicitudForm.py  edituserForm.py  institucionForm.py  ownerCreateForm.py  ownerEditForm.py  permisoForm.py  rolForm.py  rolPermisoForm.py  searchSolicitudForm.py  searchUserForm.py  seleccionarInstitucionForm.py  serviceForm.py  solicitudForm.py  userCreateByAdminForm.py  userForm.py  userRolForm.py  usuarioInstitucionCreateForm.py  usuarioInstitucionEditForm.py
admin/src/core/models/configuracion/: __init__.py  config.py
admin/src/core/models/instituciones/: __init__.py  institucion.py
admin/src/core/models/notas/: __init__.py  nota.py
admin/src/core/models/permisos/: __init__.py  permiso.py
admin/src/core/models/roles/: __init__.py  rol.py
admin/src/web/: __init__.py  commands.py  config.py  error.py  mail.py  oauth.py  oauth_vue.py  routes.py
admin/src/web/controllers/: auth.py  configuracion.py  home.py  instituciones.py  permisos.py  registration.py  roles.py  rolesPermisos.py  servicios.py  solicitudes.py  user_update.py  users.py  usersRoles.py  usuariosInstitucion.py
admin/src/web/helpers/: auth.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/static/: error.css  style.css
(+76 files in other folders)
