[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Papurello Diego <diego_papurello@outlook.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.5.0"
flask-bcrypt = "^1.0.1"
wtforms = {extras = ["email"], version = "^3.1.1"}
flask-mail = "^0.9.1"
flask-paginate = "^2023.10.8"
requests = "^2.31.0"
pyjwt = "^2.8.0"
flask-jwt-extended = "^4.5.3"
flask-cors = "^4.0.0"
authlib = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flask-shell-ipython = "^0.5.1"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
